# clinic_appointments

./: .dockerignore  .example.env  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  test.db  wait-for-it.sh
.github/workflows/: github.ci.yaml
app/: dependency.py  main.py  settings.py
app/appointments/: handlers.py  models.py  repository.py  schemas.py  service.py
app/database/: accessor.py  database.py
docs-artefacts/: 1. Архитектурная схема.md  4. buisness.md  5. realize.md  answers.txt  telegramm_bot.md
migrations/: env.py
migrations/versions/: b3c02a0e8fe3_initial_migrations.py
tests/integration/: test.db  test_appointment_repository.py
tests/unit/: test_appointment_services.py
